# protec

./: .gitignore  Cargo.toml  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/protec-core/: Cargo.toml
crates/protec-core/src/: crypto.rs  entry.rs  error.rs  format.rs  generator.rs  lib.rs  storage.rs  vault.rs  wrap.rs
crates/protec-hello/: Cargo.toml
crates/protec-hello/src/: envelope.rs  error.rs  lib.rs  tpm.rs
crates/protec-host/: Cargo.toml
crates/protec-host/src/: main.rs  nativemsg.rs  pipe.rs  protocol.rs
docs/: protec-gui-smoke.md  protec-hello-smoke.md
docs/superpowers/plans/: 2026-06-19-protec-core.md  2026-06-19-protec-ext.md  2026-06-19-protec-gui.md  2026-06-19-protec-hello.md
docs/superpowers/specs/: 2026-06-19-protec-ext-design.md  2026-06-19-protec-gui-design.md  (+2 more)
extension/: manifest.chromium.json  manifest.firefox.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/scripts/: register-host-macos.sh  register-host.ps1
extension/src/: background.ts  content.ts  forms.test.ts  forms.ts  popup.html  popup.ts  protocol.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dto.rs  main.rs  match_domain.rs  state.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  entries.rs  generator.rs  hello.rs  mod.rs  settings.rs
src-tauri/src/ipc/: framing.rs  handler.rs  mod.rs  protocol.rs  ratelimit.rs  server.rs
src-tauri/tests/: auth_flow.rs  restore_flow.rs
src/lib/: api.test.ts  api.ts  fuzzy.test.ts  fuzzy.ts  keybindings.ts  platform.test.ts  platform.ts  theme.css
(+12 files in other folders)
