[package]
name = "protec-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
protec-core = { path = "../crates/protec-core" }
protec-hello = { path = "../crates/protec-hello" }
zeroize = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = "3"
uuid = { version = "1", features = ["v4", "serde"] }
psl = "2"
url = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "sync", "time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
