[package]
name = "protec-hello"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
zeroize = "1"

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"
windows = { version = "0.61", features = [
    "Security_Credentials",
    "Security_Cryptography",
    "Storage_Streams",
    "Foundation",
] }

[dev-dependencies]
protec-core = { path = "../protec-core" }
